--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FizzBuzz</title>
+
+    <!-- BS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+
+    <!-- STYLE -->
+    <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
+
+  <body class="bg-general">
+    <div class="container">
+      <h1 class="text-center fs1 fw-bold text-light my-5">FizzBuzzDom</h1>
+      <div id="box-container" class="row gap-5 justify-content-between"></div>
+    </div>
+
     <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
